Possible fix for split gutter on wrap (#175)
* Possible fix for split gutter on wrap

Not sure why I didn't do this originally, I do worry there could be some
issue afoot but in my quick visual tests, it appears to be fine

* I disagree with this stylelint rule in this specific case

* Fix stylelint issues

--- a/packages/precision-diffs/src/style.css
+++ b/packages/precision-diffs/src/style.css
@@ -375,14 +375,6 @@ code {
   cursor: pointer;
 }
 
-[data-type='split'][data-overflow='wrap'] [data-additions] [data-line],
-[data-type='split'][data-overflow='wrap'] [data-additions] [data-separator],
-[data-type='split'][data-overflow='wrap']
-  [data-additions]
-  [data-line-annotation] {
-  border-left: 2px solid var(--pjs-bg);
-}
-
 [data-buffer] {
   position: sticky;
   left: 0;
@@ -588,6 +580,7 @@ code {
   [data-buffer],
   [data-line],
   [data-separator] {
+    margin-left: 2px;
     grid-column: 3 / 5;
   }
 }
